
Fri 24th Jan 2020, 19:59:02
Add keep_ref argument to {EL_SPLIT_STRING_LIST}.item

Sat 25th Jan 2020, 18:34:50
new routine {EL_INTERNAL}.new_factory_instance and new helper routines for managing ITERABLE's

Sun 26th Jan 2020, 19:04:16
Fixed keep_head bug in ZSTRING for mixed encodings

Wed 29th Jan 2020, 15:07:15
Refactored EL_MAKEABLE_FROM_STRING_GENERAL hierarchy to just one class EL_MAKEABLE_FROM_STRING

Wed 29th Jan 2020, 17:25:44
Refactored collection types found in class EL_REFLECTOR_CONSTANTS

Sat 1st Feb 2020, 19:30:11
Implemented workaround for CHARACTER_32.is_space bug

Mon 3rd Feb 2020, 11:09:10
Made path and encoding accessible on EL_PYXIS_TO_XML_CONVERTER

Thu 6th Feb 2020, 15:40:50
Added XML_TO_PYXIS_CONVERTER_TEST_SET to VTD_XML_AUTOTEST_APP

Sun 9th Feb 2020, 11:03:39
New test set IMAGE_UTILS_TEST_SET and additional make routine for EL_DIGEST_ARRAY

Mon 10th Feb 2020, 15:44:38
New {EL_PARSE_EVENT_GENERATOR}.is_utf_encoded and OBJECT_BUILDER_TEST_SET

Fri 14th Feb 2020, 14:52:59
Removed need for test set evaluation class EL_EQA_TEST_EVALUATOR

Tue 18th Feb 2020, 18:24:20
Simplified EL_CONSOLE_LOG_OUTPUT to use color routine set_text_color

Sat 7th Mar 2020, 13:14:08
Base test sets available as finalized versions

Sat 14th Mar 2020, 19:12:42
Added class TL_ID3_PICTURE

Tue 17th Mar 2020, 18:31:09
Passed test set to set strings on TL_MPEG_FILE

Wed 18th Mar 2020, 18:20:21
New class TL_UNIQUE_FILE_IDENTIFIER_FRAME

Thu 19th Mar 2020, 18:18:11
Added fill routine to TL_USER_TEXT_IDENTIFICATION_ID3_FRAME

Sat 21st Mar 2020, 19:57:49
New TL_FRAME_TABLE and TL_DESCRIBEABLE_ID3_TAG_FRAME

Tue 24th Mar 2020, 15:44:56
Replaced ID3-tags with TabLib in manage-mp3.ecf

Tue 31st Mar 2020, 14:47:35
Print out XML for tests that modify database in mp3-manager.ecf

Sun 12th Apr 2020, 11:07:26
Refactored EL_READABLE_ZSTRING into classes by function

Mon 13th Apr 2020, 17:00:54
First successful test of COLLATE_SONGS_TASK_TEST_SET
