@@ -24,7 +24,7 @@ See doc/manage-mp3.txt for details
 	<!--classic means C code as an intermediate language-->
 	<target name = "classic">
 		<root class = "APPLICATION_ROOT" feature = "make"/>
-		<version major = "2" minor = "1" release = "3" build = "18" company = "Eiffel-Loop" product = "manage-mp3" copyright = "Finnian Reilly"/>
+		<version major = "2" minor = "1" release = "4" build = "22" company = "Eiffel-Loop" product = "manage-mp3" copyright = "Finnian Reilly"/>
 		<option syntax = "standard" full_class_checking = "false" void_safety = "none" trace = "false" debug = "false" warning = "true">
 			<debug name = "pyxis" enabled = "false"/>
 			<assertions precondition = "true" postcondition = "true" check = "true" invariant = "true"/>
